#1517 Removed java 11 dependency